force-app/main/default/objects/Account/fields/Account_Exec__c.field-meta.xml
<CustomField>
    <fullName>Account_Exec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Exec</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts Managed</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>