force-app/main/default/objects/Account/fields/AOV_Band__c.field-meta.xml
<CustomField>
    <fullName>AOV_Band__c</fullName>
    <label>AOV Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0</fullName>
            </value>
            <value>
                <fullName>$1-$1k</fullName>
            </value>
            <value>
                <fullName>$1k-$10k</fullName>
            </value>
            <value>
                <fullName>$10k-$100k</fullName>
            </value>
            <value>
                <fullName>$100k-$1M</fullName>
            </value>
            <value>
                <fullName>$1M+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>