force-app/main/default/objects/Account/fields/License_Utilization__c.field-meta.xml
<CustomField>
    <fullName>License_Utilization__c</fullName>
    <label>License Utilization %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>