force-app/main/default/objects/Account/fields/PostSales_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>PostSales_Assessment_Score__c</fullName>
    <label>PostSales Assessment Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>