force-app/main/default/objects/Account/listViews/All_Clients.listView-meta.xml
<ListView>
    <fullName>All_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Health_Score__c</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Account_Exec__c</columns>
    <columns>Red_Account__c</columns>
    <columns>Strategic__c</columns>
    <columns>Support_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_ID__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Clients</label>
</ListView>